done half of it or smth

--- a/src/blocks/modules/footer/footer.html
+++ b/src/blocks/modules/footer/footer.html
@@ -1,1 +1,49 @@
-<footer></footer>
+<footer class="footer">
+    <div class="wrapper">
+        <div class="box-footer">
+            <a class="logo" href="index.html"><img class="logo-img" src="../../../img/logo.svg" alt="logo"></a>
+            <div class="box-footer-item">
+                <div class="box-footer-info">
+                    <ul class="box-footer-list">
+                        <li class="box-footer-list__item"><a class="box-footer-list__link" href="#">Загородные</a></li>
+                        <li class="box-footer-list__item"><a class="box-footer-list__link" href="#">Городские</a></li>
+                        <li class="box-footer-list__item"><a class="box-footer-list__link" href="#">О компании</a></li>
+                        <li class="box-footer-list__item"><a class="box-footer-list__link" href="#">Наши новости</a></li>
+                    </ul>
+                </div>
+                <div class="box-form-item">
+                    <form class="form">
+                        <h3 class="form__h3">Свяжитесь с нами</h3>
+                        <label class="form__label" for="">Ваше имя</label>
+                        <input class="form__input" type="text" placeholder="Ваше имя">
+                        <button class="btn">заказать звонок</button>
+                        <p class="form__text">Нажимая на кнопку вы подтверждаете свое согласие на обработку <a class="form__link" href="#">персональных&nbsp;данных</a>.</p>
+                    </form>
+                </div>
+                <div class="box-footer-info">
+                    <!--<ul class="box-footer-list connect">
+                        <li class="box-footer-list__item"><a class="box-footer-list__link box-footer-list__tel" href="tel:+79453425555">+7 945 342 55 55</a></li>
+                    </ul>-->
+                    
+                    <p class="box-footer-list__item"><a class="box-footer-list__link box-footer-list__tel" href="tel:+73833456012">+7 (383) 345-60-12</a></p>
+                    
+                    <ul class="box-footer-social">
+                        <li class="box-footer-social__item">
+                            <a class="box-footer-social__link box-footer-social__vk" href="#" target="_blank"></a>
+                        </li>
+                        <li class="box-footer-social__item">
+                            <a class="box-footer-social__link box-footer-social__inst" href="#" target="_blank"></a>
+                        </li>
+                        <li class="box-footer-social__item">
+                            <a class="box-footer-social__link box-footer-social__fb" href="#" target="_blank"></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="box-copyright">
+            <p class="box-copyright__copy">&copy; 2020, Все права защищены</p>
+            <p class="box-copyright__text">Сделано в рамках курса учебной платформы <a class="box-copyright__link" href="#">Frontend Blok</a></p>
+        </div>
+    </div>
+</footer>
