all the sliders added

--- a/src/blocks/modules/header/header.html
+++ b/src/blocks/modules/header/header.html
@@ -1,4 +1,27 @@
 <header class="header">
+    <div class="hero">
+        <div class="hero-promo">
+            <div class="header-promo">
+                <h1 class="header__title">Жилой комплекс HOMEFOR -<br>это жизнь с комфортом</h1>
+                <p class="header__text">Мы охватываем все важные этапы проектирование и строительство<br>дома, а также повседневная эксплуатация после окончания</p>
+                <button type="button" class="header__btn">Подробнее</button>
+            </div>
+        </div>
+        <div class="hero-promo">
+            <div class="header-promo">
+                <h1 class="header__title">Жилой комплекс HOMEFOR -<br>это жизнь с комфортом</h1>
+                <p class="header__text">Мы охватываем все важные этапы проектирование и строительство<br>дома, а также повседневная эксплуатация после окончания</p>
+                <button type="button" class="header__btn">Подробнее</button>
+            </div>
+        </div>
+        <div class="hero-promo">
+            <div class="header-promo">
+                <h1 class="header__title">Жилой комплекс HOMEFOR -<br>это жизнь с комфортом</h1>
+                <p class="header__text">Мы охватываем все важные этапы проектирование и строительство<br>дома, а также повседневная эксплуатация после окончания</p>
+                <button type="button" class="header__btn">Подробнее</button>
+            </div>
+        </div>
+    </div>
     <div class="header-menu">
         <div class="header-item">
             <a class="logo" href="index.html"><img class="logo-img" src="../../../img/logo-white.svg" alt="logo"></a>
@@ -21,10 +44,5 @@
             <a class="header-item__tel nav-link nav-icon" href="tel:+7(383)3456012">+7 (383) 345-60-12</a>
         </div>
     </div>
-    <div class="header-promo">
-        <h1 class="header__title">Жилой комплекс HOMEFOR -<br>это жизнь с комфортом</h1>
-        <p class="header__text">Мы охватываем все важные этапы проектирование и строительство<br>дома, а также повседневная эксплуатация после окончания</p>
-        <button type="button" class="header__btn">Подробнее</button>
-    </div>
-</header> 
+</header>
 
