--- a/src/blocks/modules/header/header.html
+++ b/src/blocks/modules/header/header.html
@@ -2,7 +2,7 @@
     <div class="hero">
         <div class="hero-promo">
             <div class="header-promo">
-                <h1 class="header__title">Жилой комплекс HOMEFOR -<br>это жизнь с комфортом</h1>
+                <h1 class="header__title">Жилой комплекс HOMEFOR&nbsp;&nbsp;-<br>это жизнь с комфортом</h1>
                 <p class="header__text">Мы охватываем все важные этапы проектирование и строительство<br>дома, а также повседневная эксплуатация после окончания</p>
                 <button type="button" class="header__btn">Подробнее</button>
             </div>
