--- a/src/blocks/modules/footer/footer.html
+++ b/src/blocks/modules/footer/footer.html
@@ -19,10 +19,8 @@
                     
                     <form class="form">
                         <p class="form__text">Подпишись на рассылку</p>
-                        <h3 class="form__h3">Свяжитесь с нами</h3>
-                        <label class="form__label" for="">Ваш e-mail</label>
                         <input class="form__input" type="text" placeholder="Ваш e-mail">
-                        <button class="btn">Отправить</button>
+                        <button class="form__btn">Отправить</button>
                         <p class="form__text">Согласие на обработку персональных данных</p>
                     </form>
                 </div>
